# gnirut

./: COPYING  README
contrib/Gnirut.tmbundle/: info.plist
contrib/Gnirut.tmbundle/Preferences/: gnirutpairs.tmPreferences
contrib/Gnirut.tmbundle/Syntaxes/: gnirut.tmLanguage
contrib/python/: rut.py  swap.rut
doc/: reversibility.txt  rut.txt  tutorial.tex
samples/: sample.gni  sample.rut  simple.gni  simple.rut
src/: .depend  Makefile  gnilex.mll  gnipp.ml  gnirut.ml  gnirutc.ml  gniyacc.mly  instr.ml  instr.mli  interp.ml  interp.mli  matching.ml  matching.mli  parsetree.mli  rtm.ml  rtm.mli  rutdump.ml  rutfs.ml  rutrev.ml  rutrun.ml  stab.ml  stab.mli  test1.ml  testparse.ml
